# codeatlas

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  RUN_PROJECT.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  embeddings.py  interfaces.py  main.py  models.py  services.py  status.py
backend/app/answering/: __init__.py  llm.py  prompt.py  service.py
backend/app/ingestion/: __init__.py  chunker.py  classify.py  enrichment.py  pipeline.py  readers.py  walk.py
backend/app/retrieval/: __init__.py  hybrid.py  query_transform.py  rerank.py
backend/app/stores/: __init__.py  file_manifest.py  keyword_index.py  vector_store.py
backend/tests/: conftest.py  fakes.py  test_api.py  test_chunker.py  test_embeddings.py  test_file_manifest.py  test_ingestion.py  test_llm.py  test_prompt.py  test_readers.py  test_retrieval.py  test_services.py  test_walk.py
documentation/: README.md  ai-retrieval-data-stack.md  architecture-overview.md  backend-stack.md  frontend-stack.md  tooling-testing-devops-stack.md
frontend/: .prettierignore  frontend.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/manage/: page.tsx
frontend/components/: Nav.tsx
frontend/components/chat/: ChatView.test.tsx  ChatView.tsx  Composer.tsx  Markdown.tsx  MessageBubble.tsx  SourcesPanel.test.tsx  SourcesPanel.tsx
frontend/components/manage/: ManageView.tsx
frontend/components/preview/: SourcePreview.tsx
frontend/lib/: api.ts  sse.test.ts  sse.ts  types.ts
prototype-gradio/: README.md  pyproject.toml
