[project]
name = "codeatlas-backend"
version = "0.1.0"
description = "CodeAtlas backend — ingest, index, retrieve, and answer questions over codebases with grounded citations."
requires-python = "==3.12.*"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "openai>=2.46.0",
    "pathspec>=1.1.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "rank-bm25>=0.2.2",
    "tree-sitter>=0.26.0",
    "tree-sitter-language-pack>=1.12.5",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
# Local, offline embedding fallback. Pulls in PyTorch — NOT installed in the base env.
# Enable only for air-gapped/offline use: `uv sync --extra local` (run from the repo root).
local = [
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
